kubernetes/overlays/stage/ondemand-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ondemand
spec:
  replicas: 1
  template:
    spec:
      nodeSelector:
        storage/sdf: 'true'
        network: 'public'
        slurm: 'true'
      containers:
      - name: ondemand
        volumeMounts:
        - name: shib-certs
          mountPath: /etc/shibboleth/certs/
          readOnly: true
        # general filesystems
        - name: gpfs-slac
          mountPath: /gpfs/slac/
        - name: sdf
          mountPath: /sdf/
        # support infra sw
        - name: slurm
          mountPath: /opt/slurm/
        # apps
        #- name: slac-ood-jupyter
        #  mountPath: /var/www/ood/apps/sys/slac-ood-jupyter
        #- name: ood-desktop-config
        #  mountPath: /etc/ood/config/apps/bc_desktop/
        #  readOnly: true
        #- name: slac-ood-desktop
        #  mountPath: /var/www/ood/apps/sys/bc_desktop
        #- name: slac-ood-matlab
        #  mountPath: /var/www/ood/apps/sys/slac-ood-matlab
        #- name: slac-ood-cryosparc
        #  mountPath: /var/www/ood/apps/sys/slac-ood-cryosparc
        # logs
        - name: dashboard-logs
          mountPath: /var/www/ood/apps/sys/dashboard/log
        - name: activejobs-logs
          mountPath: /var/www/ood/apps/sys/activejobs/log
        - name: nginx-logs
          mountPath: /var/log/ondemand-nginx/
        - name: apache-logs
          mountPath: /var/log/httpd24
        # docs
        #- name: sdf-docs
        #  mountPath: /var/www/ood/public/doc/
        # customisation
        - name: pun-html
          mountPath: /etc/ood/config/pun/html/
        - name: pun-html
          mountPath: /etc/ood/config/apps/dashboard/env
          subPath: pun.env
      volumes:
      - name: ood-clusterd-config
        configMap:
          name: ood-config
          items:
          - key: sdf_cluster.yml
            path: sdf.yml
      - name: shib-certs
        secret:
          secretName: auth
          items:
          - key: sp-cert.pem
            path: sp-cert.pem
          - key: sp-key.pem
            path: sp-key.pem
      # general filesystems
      - name: gpfs-slac
        hostPath:
          path: /gpfs/slac/
      - name: sdf
        hostPath:
          path: /sdf/
      # support infra sw
      - name: munge-socket
        hostPath:
          path: /var/run/munge
      - name: slurm
        hostPath:
          path: /opt/slurm
      - name: slurm-config
        hostPath:
          path: /run/slurm/conf/
      # ood apps
      #- name: slac-ood-jupyter
      #  hostPath:
      #    path: /sdf/sw/ood/stage/apps/sys/slac-ood-jupyter/
      #    type: Directory
      - name: ood-desktop-config
        configMap:
          name: ood-config
          items:
          - key: sdf_desktop.yml
            path: sdf.yml
      #- name: slac-ood-desktop
      #  hostPath:
      #    path: /sdf/sw/ood/stage/apps/sys/slac-ood-desktop/
      #    type: Directory
      #- name: slac-ood-matlab
      #  hostPath:
      #    path: /sdf/sw/ood/stage/apps/sys/slac-ood-matlab/
      #    type: Directory
      #- name: slac-ood-cryosparc
      #  hostPath:
      #    path: /sdf/sw/ood/stage/apps/sys/slac-ood-cryosparc/
      #    type: Directory
      # logs
      - name: nginx-logs
        hostPath:
          path: /sdf/sw/ood/stage/logs/ondemand-nginx
      - name: dashboard-logs
        hostPath:
          path: /sdf/sw/ood/stage/logs/dashboard
      - name: activejobs-logs
        hostPath:
          path: /sdf/sw/ood/stage/logs/activejobs
      - name: apache-logs
        hostPath:
          path: /sdf/sw/ood/stage/logs/httpd
      # docs
      #- name: sdf-docs
      #  hostPath:
      #    path: /sdf/sw/ood/stage/apps/sys/sdf-docs/
